--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@heroicons/react": "^2.2.0",
     "@tailwindcss/vite": "^4.1.13",
     "axios": "^1.12.2",
+    "flowbite": "^3.1.2",
+    "flowbite-react": "^0.12.9",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.544.0",
     "react": "^19.1.1",
